# glib-resource-compiler-cmake

./: CMakeLists.txt  LICENSE  ReadMe.md  example.gresource.xml  main.c  resource.txt
